src/yini_test/cases/golden/lenient/valid/comments/semicolon-full-line-comments.yini
@yini

; Full-line semicolon comment before a section.
^ Application
; Full-line semicolon comment before a member.
name = "lenient-semicolon-comments"
enabled = true
