src/yini_test/cases/golden/lenient/invalid/comments/inline-semicolon-comment.yini
@yini

^ Application
name = "lenient-inline-semicolon-comment" ; Inline semicolon comments are not valid.
